engine/tests/detection_corpus/bad/secret_stripe_live.js
const stripe = require('stripe')('__CORPUS_SECRET__');
